force-app/main/default/objects/BREG_Batch_Setting__mdt/BREG_Batch_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type to store settings of the batchable apex class.</description>
    <label>BREG Batch Setting</label>
    <pluralLabel>BREG Batch Settings</pluralLabel>
</CustomObject>