force-app/main/default/objects/BREG_Batch_Setting__mdt/fields/breg_Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Apex_Class_Name__c</fullName>
    <description>Name of an apex class that extends BREG_BasicBatch</description>
    <label>Apex Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>