force-app/main/default/objects/BREG_Batch_Setting__mdt/fields/breg_Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>breg_Cron_Expression__c</fullName>
    <description>Cron setup string to determine batch running frequency</description>
    <label>Cron Expression</label>
    <length>13</length>
    <type>Text</type>
</CustomField>