force-app/main/default/objects/BREG_Batch_Setting__mdt/fields/breg_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If not active then the batch will not be running</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>