force-app/main/default/objects/BREG_Batch_Setting__mdt/fields/breg_Job_sObject__c.field-meta.xml
<CustomField>
    <fullName>breg_Job_sObject__c</fullName>
    <label>Job sObject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>breg_TN_TM_SM__c</fullName>
            </value>
            <value>
                <fullName>breg_Annual__c</fullName>
            </value>
            <value>
                <fullName>breg_Entity_List_Result__c</fullName>
            </value>
            <value>
                <fullName>breg_TNTMSM__c</fullName>
                <isActive>false</isActive>
                <label>breg_TNTMSM__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>