force-app/main/default/objects/BREG_Batch_Setting__mdt/fields/breg_Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Last_Run_Date__c</fullName>
    <description>Date of the last run of the batch</description>
    <label>Last Run Date</label>
    <type>Date</type>
</CustomField>